[package]
name = "termfactor"
version = "0.6.69"
edition = "2021"
rust-version = "1.82"
authors = ["urrick hunt"]
description = "is your terminal sick, mid or sus? test your terminal features & find out."
license = "MIT"
repository = "https://github.com/urrickhunt/termfactor"
keywords = ["truecolor", "sgr", "bidi", "hyperlinks", "sixel"]

[dependencies]
unicode-width = "0.2.*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.*", features = ["consoleapi", "wincon", "winbase", "processenv", "fileapi", "handleapi", "winuser"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.*", features = ["term"] }
